--- a/javav2/usecases/create_spring_stream_app/pom.xml
+++ b/javav2/usecases/create_spring_stream_app/pom.xml
@@ -14,14 +14,17 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <properties>
-        <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>17</java.version>
+        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
     </properties>
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>software.amazon.awssdk</groupId>
                 <artifactId>bom</artifactId>
-                <version>2.10.54</version>
+                <version>2.21.20</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
