--- a/javav2/usecases/creating_scheduled_events/pom.xml
+++ b/javav2/usecases/creating_scheduled_events/pom.xml
@@ -8,11 +8,12 @@
 <version>1.0-SNAPSHOT</version>
 <packaging>jar</packaging>
 <name>java-basic-function</name>
-<properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-</properties>
+ <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>17</java.version>
+        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+    </properties>
 <dependencies>
     <dependency>
         <groupId>com.amazonaws</groupId>
@@ -61,17 +62,17 @@
     <dependency>
         <groupId>software.amazon.awssdk</groupId>
         <artifactId>dynamodb-enhanced</artifactId>
-        <version>2.11.4-PREVIEW</version>
+        <version>2.21.20</version>
     </dependency>
     <dependency>
         <groupId>software.amazon.awssdk</groupId>
         <artifactId>dynamodb</artifactId>
-        <version>2.10.41</version>
+        <version>2.21.20</version>
     </dependency>
     <dependency>
         <groupId>software.amazon.awssdk</groupId>
         <artifactId>sns</artifactId>
-        <version>2.10.41</version>
+        <version>2.21.20</version>
     </dependency>
     <dependency>
         <groupId>javax.mail</groupId>
@@ -111,8 +112,8 @@
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.8.1</version>
             <configuration>
-                <source>1.8</source>
-                <target>1.8</target>
+                <source>17</source>
+                <target>17</target>
             </configuration>
         </plugin>
     </plugins>
