--- a/.doc_gen/metadata/bedrock-runtime_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-runtime_metadata.yaml
@@ -1,8 +1,8 @@
 # zexi 0.4.0
 bedrock-runtime_InvokeModel:
-  title: Invoke the specified &BR; model to run inference
+  title: Invoke the specified &BR; model to run an inference
   title_abbrev: Invoke a model
-  synopsis: invoke an &BR; model to run inference.
+  synopsis: invoke an &BR; model to run an inference.
   category:
   languages:
     SAP ABAP:
@@ -21,8 +21,8 @@ bedrock-runtime_InvokeModel:
 
 bedrock-runtime_InvokeClaude:
   title: Invoke the Anthropic Claude model on &BR; to run an inference
-  title_abbrev: Invoke Anthropic Claude 2 on &BR;
-  synopsis: invoke the anthropic claude model on &BR; to run inference.
+  title_abbrev: Invoke Anthropic Claude on &BR;
+  synopsis: invoke the Anthropic Claude model on &BR; to run an inference.
   category:
   languages:
     Java:
@@ -52,10 +52,27 @@ bedrock-runtime_InvokeClaude:
   services:
     bedrock-runtime: {InvokeModel}
 
+bedrock-runtime_InvokeClaudeAsync:
+  title: Asynchronously invoke the Anthropic Claude model on &BR; to run an inference
+  title_abbrev: Asynchronously invoke Anthropic Claude on &BR;
+  synopsis: asynchronously invoke the Anthropic Claude model on &BR; to run aninference.
+  category:
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/bedrock-runtime
+          excerpts:
+            - description: Invoke the Anthropic Claude foundation model (async).
+              snippet_tags:
+                - bedrock-runtime.java2.invoke_claude_async.main
+  services:
+    bedrock-runtime: {InvokeModel}
+
 bedrock-runtime_InvokeJurassic2:
   title: Invoke the AI21 Labs Jurassic-2 model on &BR; to run an inference
   title_abbrev: Invoke AI21 Labs Jurassic-2 on &BR;
-  synopsis: invoke the ai21 labs jurassic-2 model on &BR; to run inference.
+  synopsis: invoke the AI21 Labs Jurassic-2 model on &BR; to run an inference.
   category:
   languages:
     Java:
@@ -83,6 +100,23 @@ bedrock-runtime_InvokeJurassic2:
             - description: Invoke the AI 21 Labs Jurassic-2 foundation model.
               snippet_tags:
                 - python.example_code.bedrock-runtime.InvokeAi21Jurassic2
+  services:
+    bedrock-runtime: {InvokeModel}
+
+bedrock-runtime_InvokeJurassic2Async:
+  title: Asynchronously invoke the AI21 Labs Jurassic-2 model on &BR; to run an inference
+  title_abbrev: Asynchronously invoke AI21 Labs Jurassic-2 on &BR;
+  synopsis: asynchronously invoke the AI21 Labs Jurassic-2 model on &BR; to run an inference.
+  category:
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/bedrock-runtime
+          excerpts:
+            - description: Invoke the AI21 Labs Jurassic-2 foundation model (async).
+              snippet_tags:
+                - bedrock-runtime.java2.invoke_jurassic-2_async.main
   services:
     bedrock-runtime: {InvokeModel}
 
@@ -120,10 +154,27 @@ bedrock-runtime_InvokeLlama2:
   services:
     bedrock-runtime: {InvokeModel}
 
+bedrock-runtime_InvokeLlama2Async:
+  title: Asynchronously invoke the Meta Llama 2 Chat model on &BR; to run an inference
+  title_abbrev: Asynchronously invoke Meta Llama 2 on &BR;
+  synopsis: asynchronously invoke the Meta Llama 2 Chat model on &BR; to run an inference.
+  category:
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/bedrock-runtime
+          excerpts:
+            - description: Invoke the Meta Llama 2 foundation model (async).
+              snippet_tags:
+                - bedrock-runtime.java2.invoke_llama2_async.main
+  services:
+    bedrock-runtime: {InvokeModel}
+
 bedrock-runtime_InvokeStableDiffusion:
   title: Invoke the Stability.ai Stable Diffusion XL model on &BR; to run an inference
   title_abbrev: Invoke Stability.ai Stable Diffusion XL on &BR;
-  synopsis: invoke the stability.ai stable diffusion xl on &BR; model to run inference.
+  synopsis: invoke the Stability.ai Stable Diffusion xl on &BR; model to run inference.
   category:
   languages:
     Java:
@@ -145,10 +196,10 @@ bedrock-runtime_InvokeStableDiffusion:
   services:
     bedrock-runtime: {InvokeModel}
 
-bedrock-runtime_InvokeModelWithResponseStream:
-  title: Invoke the specified model on &BR; to run an inference with a response stream
-  title_abbrev: Invoke a model on &BR; with a response stream
-  synopsis: invoke an model on &BR; to run an inference with a response stream.
+bedrock-runtime_InvokeStableDiffusionAsync:
+  title: Asynchronously invoke the Stability.ai Stable Diffusion XL model on &BR; to run an inference
+  title_abbrev: Asynchronously invoke Stability.ai Stable Diffusion XL on &BR;
+  synopsis: asynchronously invoke the Stability.ai Stable Diffusion xl on &BR; model to run an inference.
   category:
   languages:
     Java:
@@ -156,7 +207,24 @@ bedrock-runtime_InvokeModelWithResponseStream:
         - sdk_version: 2
           github: javav2/example_code/bedrock-runtime
           excerpts:
-            - description: Invoke a model on &BR; and process the response stream.
+            - description: Invoke the Stability.ai Stable Diffusion XL foundation model (async).
+              snippet_tags:
+                - bedrock-runtime.java2.invoke_stable_diffusion_async.main
+  services:
+    bedrock-runtime: {InvokeModel}
+
+bedrock-runtime_InvokeModelWithResponseStream:
+  title: Invoke Anthropic Claude on &BR; to run an inference with a response stream
+  title_abbrev: Invoke Anthropic Claude on &BR; and process the response stream
+  synopsis: invoke Anthropic Claude on &BR; to run an inference with a response stream.
+  category:
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/bedrock-runtime
+          excerpts:
+            - description: Invoke Anthropic Claude on &BR; and process the response stream.
               snippet_tags:
                 - bedrock-runtime.java2.invoke_model_with_response_stream.main
     Python:
@@ -164,7 +232,7 @@ bedrock-runtime_InvokeModelWithResponseStream:
         - sdk_version: 3
           github: python/example_code/bedrock-runtime
           excerpts:
-            - description: Invoke a model on &BR; and process the response stream.
+            - description: Invoke Anthropic Claude on &BR; and process the response stream.
               snippet_tags:
                 - python.example_code.bedrock-runtime.InvokeModelWithResponseStream
   services:
@@ -175,7 +243,7 @@ bedrock-runtime_Scenario_Invoke_models:
   title_abbrev: Invoke multiple LLMs on &BR;
   synopsis: invoke multiple large-language-models (LLMs) on &BR;.
   synopsis_list:
-    - Generate text with Anthropic Claude 2.
+    - Generate text with Anthropic Claude.
     - Generate text with AI21 Labs Jurassic-2.
     - Generate text with Meta Llama 2 Chat.
   category: Scenarios
